spade-tests/src/snapshots/spade_tests__usefulness__tests__refutable_pattern_let_binding_errors.snap
---
source: spade-tests/src/usefulness.rs
---
fn A() -> bool {
    let true = false;
    false
}


error: Refutable pattern in local binding: pattern false not covered
  ┌─ testinput:2:9
  │
2 │     let true = false;
  │         ^^^^ pattern pattern false not covered
  │
  = note: let requires a pattern which matches all possible options, such as a variable, struct or enum with only 1 option.
  = help: you might want to use match statement to handle different cases


